--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
 
+
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "codemonkeys-ru/repository-alias-bundle": "dev-master",
         "white-october/pagerfanta-bundle": "dev-master",
