--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,15 +33,32 @@ assetic:
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
-        less:
-            node:       /usr/local/bin/node
-            node_paths: [/usr/local/lib/node_modules]
-            apply_to:   "\.less$"
+        #less:
+        #    node:       /usr/local/bin/node
+        #    node_paths: [/usr/local/lib/node_modules]
+        #    apply_to:   "\.less$"
         cssrewrite: ~
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
         #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+
+    assets:
+        bootstrap_css:
+          inputs:
+            - "%kernel.root_dir%/../vendor/twitter/bootstrap/docs/assets/css/bootstrap.css"
+
+        bootstrap_css_responsive:
+          inputs:
+            - "%kernel.root_dir%/../vendor/twitter/bootstrap/docs/assets/css/bootstrap-responsive.css"
+
+        bootstrap_html5shiv:
+          inputs:
+            - "%kernel.root_dir%/../vendor/twitter/bootstrap/docs/assets/js/html5shiv.js"
+
+        bootstrap_js:
+          inputs:
+            - "%kernel.root_dir%/../vendor/twitter/bootstrap/docs/assets/js/bootstrap.js"
 
 # Doctrine Configuration
 doctrine:
@@ -60,9 +77,6 @@ doctrine:
     orm:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
-
-bc_bootstrap:
-    assets_dir:  %kernel.root_dir%/../vendor/twitter/bootstrap
 
 # Swiftmailer Configuration
 swiftmailer:
