--- a/src/Budget/RESTBudgetBundle/Resources/config/rest_routes_v1.yml
+++ b/src/Budget/RESTBudgetBundle/Resources/config/rest_routes_v1.yml
@@ -18,6 +18,11 @@ project:
     resource:     Budget\RESTBudgetBundle\Controller\ProjectController
     name_prefix:  api_v1_
 
+region:
+    type:         rest
+    resource:     Budget\RESTBudgetBundle\Controller\RegionController
+    name_prefix:  api_v1_
+
 involvement:
     type:         rest
     resource:     Budget\RESTBudgetBundle\Controller\ProjectInvolvementController
