--- a/src/Budget/RESTBudgetBundle/Resources/config/rest_routes_v1.yml
+++ b/src/Budget/RESTBudgetBundle/Resources/config/rest_routes_v1.yml
@@ -23,6 +23,11 @@ region:
     resource:     Budget\RESTBudgetBundle\Controller\RegionController
     name_prefix:  api_v1_
 
+spendings:
+    type:         rest
+    resource:     Budget\RESTBudgetBundle\Controller\SpendingsController
+    name_prefix:  api_v1_
+
 involvement:
     type:         rest
     resource:     Budget\RESTBudgetBundle\Controller\ProjectInvolvementController
