--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,7 +105,7 @@ repository_alias:
     repository:
         occupation: BudgetBundle:Occupation
         region: BudgetBundle:Region
-        spending: BudgetBundle:Spending
+        spending: BudgetBundle:Spendings
         project: BudgetBundle:Project
         employee: BudgetBundle:Employee
         project_involvement: BudgetBundle:ProjectInvolvement
