--- a/web/frontend/bower.json
+++ b/web/frontend/bower.json
@@ -15,6 +15,7 @@
     "requirejs-text": "2.0.*",
     "requirejs-tpl": "*",
     "backbone.marionette": "1.1.*",
-    "backbone.routefilter": "*"
+    "backbone.routefilter": "*",
+    "momentjs": "2.3.1"
   }
 }
