--- a/src/Budget/BudgetBundle/Resources/config/services.yml
+++ b/src/Budget/BudgetBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
-#    budget.example.class: Budget\BudgetBundle\Example
+    budget.reports.class: Budget\BudgetBundle\Service\Reports
 
 services:
-#    budget.example:
-#        class: %budget.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    budget.reports:
+        class: %budget.reports.class%
+        arguments: [@service_container]
