--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -99,10 +99,16 @@ swiftmailer:
     password:  %mailer_password%
     spool:     { type: memory }
 
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: Budget\ApplicationBundle\Entity\User
 
 repository_alias:
     repository_key: "r"
     repository:
+        user: ApplicationBundle:User
+
         occupation: BudgetBundle:Occupation
         region: BudgetBundle:Region
         spending: BudgetBundle:Spendings
