--- a/src/Budget/BudgetBundle/Resources/config/services.yml
+++ b/src/Budget/BudgetBundle/Resources/config/services.yml
@@ -1,7 +1,12 @@
 parameters:
     budget.reports.class: Budget\BudgetBundle\Service\Reports
+    budget.history.class: Budget\BudgetBundle\Service\History
 
 services:
     budget.reports:
         class: %budget.reports.class%
+        arguments: [@service_container]
+
+    budget.history:
+        class: %budget.history.class%
         arguments: [@service_container]
