--- a/src/Budget/RESTBudgetBundle/Resources/config/services.yml
+++ b/src/Budget/RESTBudgetBundle/Resources/config/services.yml
@@ -5,3 +5,10 @@ services:
       - { name: jms_serializer.event_listener, event: serializer.pre_serialize, method: onPreSerialize, class: Budget\BudgetBundle\Entity\Employee }
       - { name: jms_serializer.event_listener, event: serializer.post_serialize, method: onPostSerialize, class: Budget\BudgetBundle\Entity\Employee }
     arguments: [@security.context, @em]
+
+  budget.serialization.spendings_listener:
+    class: Budget\RESTBudgetBundle\Listener\EmployeeSerializationListener
+    tags:
+      - { name: jms_serializer.event_listener, event: serializer.pre_serialize, method: onPreSerialize, class: Budget\BudgetBundle\Entity\Employee }
+      - { name: jms_serializer.event_listener, event: serializer.post_serialize, method: onPostSerialize, class: Budget\BudgetBundle\Entity\Employee }
+    arguments: [@security.context, @em]
