--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,9 +27,9 @@ fos_rest:
     view:
         view_response_listener: 'force'
     format_listener:
-            default_priorities: ['json', html, '*/*']
-            fallback_format: json
-            prefer_extension: true
+        rules:
+            - { path: "^/", priorities: ['json', html, '*/*'],fallback_format: json, prefer_extension: true }
+
 sensio_framework_extra:
     view:    { annotations: false }
     router:  { annotations: true }
