--- a/web/frontend/bower.json
+++ b/web/frontend/bower.json
@@ -14,6 +14,7 @@
         "requirejs": "2.1.*",
         "requirejs-text": "2.0.*",
         "requirejs-tpl": "*",
+        "requirejs-i18n": "2.0.*",
         "backbone.marionette": "1.1.*",
         "backbone.routefilter": "*",
         "momentjs": "2.3.1",
